- Menu Layouts almost done, coffee page is left  - Need to add complete menu for each category  - Right now, it's based off the UI mock-up Spruha made

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -125,7 +125,7 @@
             android:background="@color/colorBasic"
             android:layout_marginTop="10dp"
             android:inputType="textEmailAddress"
-            android:hint="Email:"
+            android:hint="@string/email"
             android:paddingHorizontal="10dp"
             android:textColorHint="@color/black"
             android:textColor="@color/black" />
