--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -18,146 +18,130 @@
             android:id="@+id/user_name_display"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/howManyStarsEarned"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="11dp"
-            android:text=""
+            android:layout_marginTop="114dp"
+            android:text="@string/my_account"
             android:textAlignment="center"
-            android:textSize="20sp" />
+            android:textColor="@android:color/black"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/howManyStarsEarned"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/edit_phone_number"
+            android:layout_width="260dp"
             android:layout_height="40dp"
-            android:layout_above="@+id/howManyStarsLeft"
+            android:layout_below="@+id/user_name_display"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="14dp"
-            android:text="@string/_4_10"
-            android:textAlignment="center"
+            android:layout_marginTop="28dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/phone_number"
+            android:inputType="phone"
+            android:paddingHorizontal="10dp"
             android:textColor="@color/black"
-            android:textSize="30sp" />
+            android:textColorHint="@color/black" />
 
-        <TextView
-            android:id="@+id/howManyStarsLeft"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/edit_password"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edit_phone_number"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
+
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edit_password"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/name"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
+
+        <EditText
+            android:id="@+id/edit_question"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edit_name"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/security_question"
+            android:inputType="text"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
+
+        <EditText
+            android:id="@+id/edit_answer"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edit_question"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/answer"
+            android:inputType="text"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
+
+        <EditText
+            android:id="@+id/edit_birthday"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edit_answer"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/birthdate_mm_dd_yyyy"
+            android:inputType="date"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
+
+        <EditText
+            android:id="@+id/edit_email"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edit_birthday"
+            android:layout_marginTop="25dp"
+            android:background="@color/colorBasic"
+            android:ems="10"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
+
+        <Button
+            android:id="@+id/edit_user"
+            android:layout_width="110dp"
             android:layout_height="30dp"
-            android:layout_alignBottom="@+id/rewardsBar"
+            android:layout_below="@+id/edit_email"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="45dp"
-            android:text="@string/howManyStarsLeft"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            tools:text="6 stars until next reward!" />
-
-        <ProgressBar
-            android:id="@+id/rewardsBar"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="250dp"
-            android:layout_height="20dp"
-            android:layout_above="@+id/music_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="83dp"
-            android:progress="40"
-            android:progressDrawable="@drawable/rounded_progress_bar" />
-
-        <Button
-            android:id="@+id/menu_button"
-            android:layout_width="115dp"
-            android:layout_height="70dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="45dp"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="280dp"
-            android:background="@drawable/rounded_button"
-            android:onClick="menuPage"
-            android:text="@string/menu"
-            android:textColor="@color/black"
-            android:layout_alignParentStart="true" />
-
-        <Button
-            android:id="@+id/order_button"
-            android:layout_width="115dp"
-            android:layout_height="70dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="45dp"
-            android:layout_marginRight="45dp"
-            android:layout_marginTop="280dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/order"
-            android:textColor="@color/black"
-            android:onClick="orderOTGPage"/>
-
-        <Button
-            android:id="@+id/music_button"
-            android:layout_width="115dp"
-            android:layout_height="70dp"
-            android:layout_alignLeft="@+id/menu_button"
-            android:layout_alignStart="@+id/menu_button"
-            android:layout_below="@+id/menu_button"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/music"
-            android:textColor="@color/black"
-            android:onClick="musicPage"/>
-
-        <Button
-            android:id="@+id/rewards_button"
-            android:layout_width="115dp"
-            android:layout_height="70dp"
-            android:layout_alignRight="@+id/order_button"
-            android:layout_alignEnd="@+id/order_button"
-            android:layout_below="@+id/order_button"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/rewards"
-            android:textColor="@color/black"/>
-
-        <Button
-            android:id="@+id/account_button"
-            android:layout_width="115dp"
-            android:layout_height="70dp"
-            android:layout_alignLeft="@+id/music_button"
-            android:layout_alignStart="@+id/music_button"
-            android:layout_below="@+id/music_button"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/account"
-            android:textColor="@color/black"/>
-
-        <Button
-            android:id="@+id/contact_us_button"
-            android:layout_width="115dp"
-            android:layout_height="70dp"
-            android:layout_alignRight="@+id/rewards_button"
-            android:layout_alignEnd="@+id/rewards_button"
-            android:layout_below="@+id/rewards_button"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/contactUs"
-            android:textColor="@color/black"
-            android:onClick="contactUsPage"/>
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignBaseline="@+id/howManyStarsEarned"
-            android:layout_alignBottom="@+id/howManyStarsEarned"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_toEndOf="@+id/howManyStarsEarned"
-            android:layout_toRightOf="@+id/howManyStarsEarned"
-            android:text="\u2605"
-            android:textAlignment="center"
-            android:textColor="@color/purple"
-            android:textSize="30sp"
-            tools:text="@string/star" />
-
+            android:background="@color/black"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="30dp"
+            android:text="@string/save"
+            android:textColor="@color/white" />
     </android.widget.RelativeLayout>
 </ScrollView>
