--- a/app/src/main/res/menu/activity_menu_smoothie_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_smoothie_drawer.xml
@@ -5,21 +5,33 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/my_account_option"
+            android:icon="@drawable/ic_person_black_24dp"
+            android:title="My Account" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/menu_option"
+            android:icon="@drawable/ic_restaurant_menu_black_24dp"
+            android:title="Menu" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/order_option"
+            android:icon="@drawable/ic_receipt_black_24dp"
+            android:title="Order On The Go" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/rewards_option"
+            android:icon="@drawable/ic_attach_money_black_24dp"
+            android:title="Rewards" />
+        <item
+            android:id="@+id/music_option"
+            android:icon="@drawable/ic_music_note_black_24dp"
+            android:title="Music" />
+        <item
+            android:id="@+id/specials_option"
+            android:icon="@drawable/ic_grade_black_24dp"
+            android:title="Specials" />
+        <item
+            android:id="@+id/contact_us_option"
+            android:icon="@drawable/ic_message_black_24dp"
+            android:title="Contact Us" />
     </group>
 
     <item android:title="Communicate">
